<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LectureAid</string>
    <string name="page">Page</string>
    <string name="goto_page">Go to page...</string>
    <string name="goto_page_dialog_title">Go to page</string>
    <string name="goto_page_go_button">Go</string>
    <string name="rotate_page_left">Rotate left</string>
    <string name="rotate_page_right">Rotate right</string>
    <string name="find_text">Find...</string>
    <string name="find_dialog_title">Find text</string>
    <string name="find_go_button">Find</string>
    <string name="find_cancel_button">Cancel</string>
    <string name="clear_find_text">Clear find</string>
    <string name="cancel">Cancel</string>
    <string name="searching_for">Searching for "%1$s"</string>
    <string name="page_of">Page %1$d of %2$d</string>
    <string name="notification_connection_conflict">您的账号在另一个地方登录</string>
    <string name="login_hint_username">登录名</string>
    <string name="login_hint_pwd">密码</string>
    <string name="login_label_login">登录</string>
    <string name="login_label_signin">注册</string>
    <string name="signin_hint_pwd">密码</string>
    <string name="signin_hint_repwd">确认密码</string>
    <string name="signin_hint_username">登录名</string>
    <string name="signin_hint_email">邮箱</string>
    <string name="signin_label_signin">注册</string>
    <string name="signin_toast_userexists">用户已存在，请换一个名字注册</string>

</resources>