<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_signin_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signin_hint_username" />

    <EditText
        android:id="@+id/et_signin_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signin_hint_pwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_signin_repwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signin_hint_repwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_signin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signin_hint_email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSiginClick"
        android:text="@string/signin_label_signin" />

</LinearLayout>