<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_username" />

    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_pwd"
        android:inputType="textPassword" />

	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="onLoginClick"
	    android:text="@string/login_label_login" />
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="onSiginClick"
	    android:text="@string/login_label_signin" />
</LinearLayout>